# demo

cmake/t4/src/: CMakeLists.txt
cmake/t6/cmake/: FindHELLO.cmake
